namespace Spg.Meixner.Pos.Aquarium.Angular.Models
{
    public enum Rank
    {
        None = 0,
        Plant = 1,
        Crustacean = 2,
        Mammal = 3,
        Fish = 4
    }
}