namespace Spg.Meixner.Pos.Aquarium.Angular.Models
{
    public enum Region
    {
        None = 0,
        Tropics = 1,
        OpenSea = 2,
        DeepSea = 3,
        Lake = 4
    }
}